--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
   --primary-color: #722e63;
   --secondary-color: #aa81a1;
   --accent-color: #1a1819;
+  --accent2-color:#d4c0d0; 
 }
 
 * {
@@ -30,7 +31,7 @@ header {
   position: sticky;
   position: -webkit-sticky;
   top: 0;
-  background-color: rgba(114,46,99,.8);
+  background-color: rgba(114,46,99,.9);
   background-attachment: fixed;
   background-position: 80%;
   z-index: 999;
@@ -84,14 +85,16 @@ header nav ul li a:hover {
   background-position: 80%;
 }
 .hero-title{
-  width: 35%;
-  text-align: left;
+  width: 40%;
+  /* text-align: left; */
   margin: 3.5%;
-  color: var(--accent-color)
-  font-size: 20px;
+  color: var(--accent-color);
+  font-size: 1.6vw;
   line-height: 1.2;
-  background-color: rgba(255,255,255,.25);
+  background-color:rgba(212,192,208,.4);
+  /* background-color: rgba(255,255,255,.25); */
   padding:20px;
+  border-radius:15px;
 }
 
 .hero-title h2 {
@@ -102,20 +105,17 @@ header nav ul li a:hover {
 }
 .hero-title p{
   color: var(--accent-color);
+  font-size: 1.6vw;
 
 }
 
 .image{
-  flex: 0 32%;
-  margin-right: 0;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  width:30%;
+  margin:3%;
   border: 4px solid var(--secondary-color);
-  padding: 20px;
+  padding: 10px;
   color: var(--secondary-color);
-  width: 70%;
-  min-height: 270px;
-  margin: 3.5%;
+  min-height: 60%;
   border-radius: 15px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   margin-right: 20px;
@@ -138,7 +138,7 @@ header nav ul li a:hover {
   color: var(--accent-color);
   padding-bottom: 20px;
   text-align: center;
-  margin: 25px auto;
+  margin: 35px auto;
   width: 50%;
   border-color: var(--primary-color);
 }
@@ -156,10 +156,290 @@ header nav ul li a:hover {
   margin: 0 auto;
   font-size: 20px;
   text-align: center;
+  font-size: 2vw;
 }
-
 
 .flex-row {
   display: flex;
 }
 
+/* GRID CONTAINER */
+.grid-wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  /* grid-template-rows: repeat(10, 1fr); */
+  grid-auto-rows: minmax(200px, 1fr);
+  grid-auto-flow: dense;
+  width:95%;
+  justify-content: space-between;
+  padding:10px;
+}
+/* .grid-item {
+  justify-content: center;
+  align-items: flex-end;
+  border: 3px solid var(--primary-color);
+  border-radius: 5px;
+  background-color: var(--accent2-color);
+  grid-auto-flow: column;
+  display: flex;
+} */
+
+.grid-item {
+  justify-content: center;
+  align-items: flex-end;
+  padding: 20px;
+  border: 3px solid var(--primary-color);
+  border-radius: 5px;
+  background-color: var(--accent2-color);
+  /* display:flex; */
+  /* padding:70px; */
+  background-size: cover;
+}
+.item-1{
+  background-image:url("../images/run-buddy-snapshot.png");
+  background-size: cover;
+  opacity: 1;
+  background-position:center;
+  grid-column: span 4;
+  align-items: center;
+}
+.item-2{
+  background-image:url("../images/horiseon-refactor-snapshot.png");
+  background-size: cover;
+  background-position:center;
+  opacity: 1;
+  grid-column: span 4;
+  align-items: center;
+}
+.item-3{
+  background-image:url("../images/penny4.JPG");
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 1;
+  grid-column: span 3;
+  /* grid-row: span 5; */
+}
+
+.item-4{
+  background-image:url("../images/penny2.JPG");
+  opacity: 1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position:center;
+  grid-column: span 2;
+  /* grid-row: span 5; */
+  align-items: center;
+}
+.item-5{
+  background-image:url("../images/penny3.JPG");
+  background-size: cover;
+  opacity: 1;
+  background-repeat: no-repeat;
+  grid-column: span 3;
+  /* grid-row: span 5; */
+  align-items: center;
+}
+
+.grid-item h4{
+  color: var(--primary-color);
+  background:var(--accent2-color);
+  width:100%;
+  border-radius: 15px;
+  padding:10px;
+  position: relative;
+  z-index: 1;
+}
+.grid-item a{
+  color: var(--primary-color);
+  text-decoration: none;
+}
+/* .grid-item-title h3 {
+  position: relative;
+  z-index: 1;
+  font-size: 28px;
+  align-items: center;
+  width: 100%;
+  transition: 0.6s;
+  background: linear-gradient(rgba(170,129,161,.1), var(--secondary-color));
+} */
+
+
+.item-1:hover, .item-2:hover, .item-3:hover,.item-4:hover,.item-5:hover {
+  background-size: cover;
+  opacity: .8;
+}
+
+
+/* CONTACT ME SECTION */
+
+.contact{
+  background:var(--secondary-color);
+}
+.contact-title {
+  font-size: 48px;
+  border-bottom: 3px solid;
+  color: var(--accent-color);
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 35px auto;
+  width: 50%;
+  border-color: var(--primary-color);
+}
+.contact h2{
+  font-style: italic;
+  font-size: 3vw;
+  color: var(--accent-color);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.contact p{
+  line-height: 1.3;
+  color: var(--primary-color);
+  width: 80%;
+  margin: 0 auto;
+  font-size: 20px;
+  text-align: center;
+}
+
+.contact > *{
+  flex: 1;
+}
+.contact-item {
+  margin: 15px auto;
+  padding-bottom: 20px;
+  width: 60%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.contact-item h3 {
+  color: var(--accent-color);
+  font-size: 28px;
+  flex: 1 30%;
+}
+.contact a{
+  color: var(--primary-color);
+}
+.contact-img {
+  flex: 1 12%;
+  margin-right: 20px;
+}
+.contact-type {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.contact-img img {
+  width: 100%;
+  max-width:50px;
+}
+.contact-item-info {
+  flex: 12;
+}
+.contact-info-item h4 {
+  font-size: 26px;
+  line-height: 1.5;
+  color: var(--secondary-color);
+}
+
+/* FOOTER STYLES START */
+footer {
+  background: var(--primary-color);
+  padding: 40px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+footer h2 {
+  color: var(--accent-color);
+  font-size: 30px;
+  margin: 0;
+}
+
+footer div {
+  line-height: 1.5;
+  text-align: right;
+}
+footer p {
+  color: var(--accent-color);
+}
+
+footer a {
+  color: var(--accent-color);
+}
+/* MEDIA QUERIES */
+@media screen and (max-width: 980px) {
+  header {
+    padding-bottom: 0;
+    justify-content: center;
+    position: relative;
+  }
+
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
+  header nav ul {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+  }
+  header nav ul li a {
+    font-size: 20px;
+  }
+
+  footer h2, footer div {
+    text-align: center;
+    width: 100%;
+  }
+}
+  @media screen and (max-width: 768px) {
+    section {
+      padding: 30px 15px;
+    }
+    .contact h3 {
+      flex: 1 100%;
+      text-align: center;
+    }
+  
+    .contact-info {
+      flex: 2 100%;
+      text-align: center;
+      justify-content: center;
+    }
+  
+    .contact-item-info {
+      flex: 100%;  
+    }
+    .grid-container {
+      grid-template-columns: 1fr 1fr;
+  
+    }
+
+
+  }
+  @media screen and (max-width: 575px) {
+    .image{
+      width:100%;
+    }
+    .hero-title p {
+      width: 95%;
+    }
+    .hero-title,.contact-title,.project-title {
+      width: 95%;
+    }
+    .project{
+      flex:0 100%;
+    }
+    .project p{
+      width: 100%;
+    }
+  }
