--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,7 +222,7 @@ header nav ul li a:hover {
   background-repeat: no-repeat;
   opacity: 1;
   grid-column: span 3;
-  /* grid-row: span 5; */
+  grid-row: span 2;
 }
 
 .item-4{
@@ -232,7 +232,7 @@ header nav ul li a:hover {
   background-repeat: no-repeat;
   background-position:center;
   grid-column: span 2;
-  /* grid-row: span 5; */
+  grid-row: span 2;
   align-items: center;
 }
 .item-5{
@@ -241,7 +241,7 @@ header nav ul li a:hover {
   opacity: 1;
   background-repeat: no-repeat;
   grid-column: span 3;
-  /* grid-row: span 5; */
+  grid-row: span 2;
   align-items: center;
 }
 
